--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 <head>
 <title>Try to catch the object's</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 </body>
 
-<h1>Mk's try to catch the objets game!</h1>
+<h1>Mk's Its Raining Apples and Baseballs Game!</h1>
 
-<p>The object of the game is to catch the objects not the trash</p>
+<p>The object of the game is to catch the objects in the basket. You do not want to catch the baseballs</p>
 
 <h2>Welecome to Mk's try to catch the objects game<h2>
 
-<p>This is the place to learn how to play the game Try to catch the objects<p>
+<p>This is the place to learn how to play the game It's Raining Apples and Baseballs<p>
 
-<h2>fallingapples</h2>
+<h2>I hope you like my game </h2>
 
-<p> This is the place to come play try to catch the objects</p>
+<p> This is the place to come and play my game </p>
 
 <img src="fallingapples.jpg">
 
